# yapa

./: .gitignore  ChangeLog  Makefile.am  NEWS  README.md  autogen.sh  configure.ac
src/: Makefile.am  config.c  directories.c  exif.c  gpx-tracks.c  htmlfiles.c  images.c  main.c  main.h  style.c  txtnotes.c
